<resources>
    <string name="app_name">SensorCollector</string>
    <string name="sensor_collector">Sensor Collector</string>
    <string name="got_nothing_from_pressure_sensor">> pressure sensor not found</string>
    <string name="got_nothing_from_light_sensor">> light sensor not found</string>
    <string name="got_nothing_from_ambient_temperature_sensor">> ambient temperature sensor not found</string>
    <string name="got_nothing_from_relative_humidity_sensor">> humidity sensor not found</string>
    <string name="accelerometer_not_found">> accelerometer not found</string>
    <string name="gravity_sensor_not_found">> gravity sensor not found</string>
    <string name="gyroscope_not_found">> gyroscope not found</string>
    <string name="rotation_vector_sensor_not_found">> rotation vector sensor not found</string>
    <string name="step_counter_not_found">> step counter not found</string>
    <string name="step_detector_not_found">> step detector not found or not triggered</string>
    <string name="gnss_measurements_not_supported">> gnss measurements not supported</string>
    <string name="wifi_scan_results"><![CDATA[> wifi scan results]]></string>
    <string name="blue_tooth_scan_results">> blue tooth scan results</string>
    <string name="bonded_blue_tooth"><![CDATA[> bonded blue tooth]]></string>
    <string name="click_to_enable_data_storage">click to enable data storage</string>
    <string name="click_to_enable_ui_refresh">click to enable ui refresh</string>
    <string name="ble_scan_results"><![CDATA[> ble scan results]]></string>
    <string name="carry_type">carry type:</string>
    <string name="environment">environment:</string>
    <string name="speed_level">speed level:</string>

    <string-array name="carry_list">
        <item>hand</item>
        <item>coat</item>
        <item>trousers</item>
        <item>handbag</item>
    </string-array>

    <string-array name="environment_list">
        <item>lab</item>
        <item>crossenv</item>
        <item>interfere</item>
        <item>parking</item>
    </string-array>

    <string-array name="speed_level_list">
        <item>fast</item>
        <item>low</item>
    </string-array>

</resources>