<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    tools:context=".CollectorActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_collector"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/saveEnableButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_enable_data_storage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainTitle"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/uiEnableButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_enable_ui_refresh"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saveEnableButton"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/uuidTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carry_type"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp" />

            <Spinner
                android:id="@+id/carrySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/environment"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp" />

            <Spinner
                android:id="@+id/environmentSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_level"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp" />

            <Spinner
                android:id="@+id/speedLevelSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/uiEnableButton"
        app:layout_constraintLeft_toLeftOf="parent"
        android:fitsSystemWindows="true"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/uiEnableButton"
            app:layout_constraintLeft_toLeftOf="parent"

            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp">


            <TextView
                android:id="@+id/pressureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="20dp"

                android:text="@string/got_nothing_from_pressure_sensor"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mainTitle" />

            <TextView
                android:id="@+id/lightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:text="@string/got_nothing_from_light_sensor"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pressureTextView"
                />

            <TextView
                android:id="@+id/ambientTempTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:text="@string/got_nothing_from_ambient_temperature_sensor"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lightTextView"
                />

            <TextView
                android:id="@+id/relHumidityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:text="@string/got_nothing_from_relative_humidity_sensor"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ambientTempTextView"
                />
            <!--        android:textColor="#EE0000"-->

            <TextView
                android:id="@+id/accelerometerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:text="@string/accelerometer_not_found"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relHumidityTextView"
                />

            <TextView
                android:id="@+id/gravityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:text="@string/gravity_sensor_not_found"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accelerometerTextView"
                />

            <TextView
                android:id="@+id/gyroscopeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:text="@string/gyroscope_not_found"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gravityTextView"
                />

            <TextView
                android:id="@+id/rotationVectorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:text="@string/rotation_vector_sensor_not_found"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gyroscopeTextView"
                />

            <TextView
                android:id="@+id/stepCounterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:text="@string/step_counter_not_found"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rotationVectorTextView"
                />

            <TextView
                android:id="@+id/stepDetectorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:text="@string/step_detector_not_found"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stepCounterTextView"
                />

            <TextView
                android:id="@+id/gnssMeasurementsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:text="@string/gnss_measurements_not_supported"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stepDetectorTextView"
                />

            <TextView
                android:id="@+id/wifiScanTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:text="@string/wifi_scan_results"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gnssMeasurementsTextView"
                />

            <TextView
                android:id="@+id/bluetoothScanTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:text="@string/blue_tooth_scan_results"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wifiScanTextView"
                />

            <TextView
                android:id="@+id/bleScanTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:text="@string/ble_scan_results"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bluetoothScanTextView"
                />


        </LinearLayout>

    </ScrollView>



</LinearLayout>